Fix condition for workflow dispatch trigger

--- a/.github/workflows/context-dump.yml
+++ b/.github/workflows/context-dump.yml
@@ -16,7 +16,7 @@ jobs:
       run: echo '${{ toJSON(github.event) }}'
 
     - name: workflow dispatch trigger
-      if: '${{ github.event.action == "workflow_dispatch" }}'
+      if: ${{ github.event_name == 'workflow_dispatch' }}
       run: echo "Hello from workflow_dispatch"
 
     - name: issue create trigger
