--- a/.github/workflows/context-dump.yml
+++ b/.github/workflows/context-dump.yml
@@ -16,5 +16,5 @@ jobs:
       run: echo '${{ toJSON(github.event) }}'
 
     - name: workflow dispatch trigger
-      if: github.event_name == 'workflow_dispatch'
+      if: github.event.action == "workflow_dispatch"
       run: echo "Hello from workflow_dispatch"
