--- a/.github/workflows/context-dump.yml
+++ b/.github/workflows/context-dump.yml
@@ -15,6 +15,10 @@ jobs:
     - name: dump event context
       run: echo '${{ toJSON(github.event) }}'
 
+    - name: workflow dispatch trigger
+      if: ${{ github.event_name == 'workflow_dispatch' }}
+      run: echo "Hello from workflow_dispatch"
+
     - name: issues opened trigger
       if: ${{ github.event_name == 'issues' && github.event.action == 'opened' }}
       run: echo "Hello from issues.opened"
