--- a/.github/workflows/03-dotnet-ci.yml
+++ b/.github/workflows/03-dotnet-ci.yml
@@ -16,5 +16,8 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v5
 
+    - name: ls
+      run: ls -la
+
     - name: build
       run: dotnet build
