--- a/.github/workflows/03-dotnet-ci.yml
+++ b/.github/workflows/03-dotnet-ci.yml
@@ -20,4 +20,4 @@ jobs:
       run: ls -la
 
     - name: build
-      run: dotnet build
+      run: dotnet build --project /GitHubActions-PracticeRepo.csproj
