--- a/.github/workflows/03-dotnet-ci.yml
+++ b/.github/workflows/03-dotnet-ci.yml
@@ -20,4 +20,4 @@ jobs:
       run: dotnet build ./GitHubActions-PracticeRepo/GitHubActions-PracticeRepo.csproj
 
     - name: Test
-      run: dotnet test ./GitHubActions-PracticeRepo.Tests/GitHubActions-PracticeRepo.Tests.csproj
+      run: dotnet test ./GitHubActions-PracticeRepo.Tests/GitHubActions-PracticeRepo.Tests.csproj --logger "console;verbosity=detailed"
